Fix the ping-pong cloudlet example
* Fix the descriptor file to properly configure the connectors.
* Remove the usage of a key-value store (it complicates this simple example).
* Minor other refactorings (especially related to logging).

--- a/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/ping-cloudlet.properties
@@ -22,22 +22,20 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PingCloudlet$LifeC
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PingCloudlet$PingCloudletContext
 cloudlet.resource_file=ping-cloudlet.properties
 
-queue.consumer.amqp.exchange=pingpong-exchange
+queue.consumer.amqp.exchange=pong-exchange
 queue.consumer.amqp.routing_key=pong
 queue.consumer.amqp.queue=pong-queue
+queue.consumer.amqp.exclusive=false
 queue.consumer.amqp.auto_ack=false
 queue.consumer.amqp.durable=false
 queue.consumer.amqp.auto_delete=true
 queue.consumer.amqp.passive=false
-queue.consumer.amqp.exclusive=false
 
-queue.publisher.amqp.exchange=pingpong-exchange
+queue.publisher.amqp.exchange=ping-exchange
 queue.publisher.amqp.routing_key=ping
-queue.publisher.amqp.queue=ping-queue
-queue.publisher.amqp.auto_ack=false
 queue.publisher.amqp.durable=false
 queue.publisher.amqp.auto_delete=true
 queue.publisher.amqp.passive=false
-queue.publisher.amqp.exclusive=false
 
-queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.consumer.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.publisher.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
