--- a/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/pong-cloudlet.properties
@@ -22,26 +22,20 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$LifeC
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.PongCloudlet$PongCloudletContext
 cloudlet.resource_file=pong-cloudlet.properties
 
-queue.consumer.amqp.exchange=pingpong-exchange
+queue.consumer.amqp.exchange=ping-exchange
 queue.consumer.amqp.routing_key=ping
 queue.consumer.amqp.queue=ping-queue
+queue.consumer.amqp.exclusive=false
 queue.consumer.amqp.auto_ack=false
 queue.consumer.amqp.durable=false
 queue.consumer.amqp.auto_delete=true
 queue.consumer.amqp.passive=false
-queue.consumer.amqp.exclusive=false
 
-queue.publisher.amqp.exchange=pingpong-exchange
+queue.publisher.amqp.exchange=pong-exchange
 queue.publisher.amqp.routing_key=pong
-queue.publisher.amqp.queue=pong-queue
-queue.publisher.amqp.auto_ack=false
 queue.publisher.amqp.durable=false
 queue.publisher.amqp.auto_delete=true
 queue.publisher.amqp.passive=false
-queue.publisher.amqp.exclusive=false
 
-queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
-
-kvstore.kvstore.connector_name=KVSTORE
-kvstore.kvstore.bucket=ping-pong
-kvstore.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.consumer.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.publisher.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
