Fix indexer cloudlet configuration. Minor logging updates

--- a/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
+++ b/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
@@ -22,27 +22,27 @@ cloudlet.main_class=eu.mosaic_cloud.examples.realtime_feeds.indexer.IndexerCloud
 cloudlet.context_class=eu.mosaic_cloud.examples.realtime_feeds.indexer.IndexerCloudlet$IndexerCloudletContext
 cloudlet.resource_file=indexer-cloudlet.properties
 
-urgent.queue.consumer.amqp.exchange=feeds.index-data
-urgent.queue.consumer.amqp.exchange_type=topic
-urgent.queue.consumer.amqp.routing_key=urgent
-urgent.queue.consumer.amqp.queue=feeds.index-data.urgent
-urgent.queue.consumer.amqp.durable=true
-urgent.queue.consumer.amqp.auto_delete=false
-urgent.queue.consumer.amqp.passive=false
-urgent.queue.consumer.amqp.exclusive=false
-urgent.queue.consumer.amqp.auto_ack=false
-urgent.queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+urgent.amqp.exchange=feeds.index-data
+urgent.amqp.exchange_type=topic
+urgent.amqp.routing_key=urgent
+urgent.amqp.queue=feeds.index-data.urgent
+urgent.amqp.durable=true
+urgent.amqp.auto_delete=false
+urgent.amqp.passive=false
+urgent.amqp.exclusive=false
+urgent.amqp.auto_ack=true
+urgent.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
-batch.queue.consumer.amqp.exchange=feeds.index-data
-batch.queue.consumer.amqp.exchange_type=topic
-batch.queue.consumer.amqp.routing_key=batch
-batch.queue.consumer.amqp.queue=feeds.index-data.batch
-batch.queue.consumer.amqp.durable=true
-batch.queue.consumer.amqp.auto_delete=false
-batch.queue.consumer.amqp.passive=false
-batch.queue.consumer.amqp.exclusive=false
-batch.queue.consumer.amqp.auto_ack=false
-batch.queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+batch.amqp.exchange=feeds.index-data
+batch.amqp.exchange_type=topic
+batch.amqp.routing_key=batch
+batch.amqp.queue=feeds.index-data.batch
+batch.amqp.durable=true
+batch.amqp.auto_delete=false
+batch.amqp.passive=false
+batch.amqp.exclusive=false
+batch.amqp.auto_ack=true
+batch.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 metadata.kvstore.bucket=feed-metadata
 metadata.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
