--- a/drivers-stubs/amqp/pom.xml
+++ b/drivers-stubs/amqp/pom.xml
@@ -94,6 +94,11 @@
 			<version>${versions.dependencies.amqp}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${versions.dependencies.slf4j}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${versions.dependencies.junit}</version>
