--- a/connectors/pom.xml
+++ b/connectors/pom.xml
@@ -98,6 +98,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>${versions.dependencies.json}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${versions.dependencies.guava}</version>
@@ -134,6 +139,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<!-- FIXME -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>${versions.plugins.dependency}</version>
+				<configuration>
+					<failOnWarning>false</failOnWarning>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
