--- a/examples/realtime-feeds-indexer/pom.xml
+++ b/examples/realtime-feeds-indexer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>java-parent</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.0</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>mosaic-examples-feeds-indexer</artifactId>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
 			<artifactId>mosaic-cloudlet</artifactId>
-			<version>0.4-SNAPSHOT</version>
+			<version>0.4.0</version>
 		</dependency>
 	</dependencies>
 	<build>
