--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>java-parent</artifactId>
 		<groupId>eu.mosaic_cloud</groupId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.0</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>mosaic-examples</artifactId>
