--- a/examples/simple-components/pom.xml
+++ b/examples/simple-components/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>java-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.0</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>components-examples</artifactId>
