--- a/infrastructure/components-container/pom.xml
+++ b/infrastructure/components-container/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>components-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 	<artifactId>components-container</artifactId>
 	<dependencies>
