--- a/infrastructure/components-jetty/pom.xml
+++ b/infrastructure/components-jetty/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.mosaic_cloud</groupId>
 	<artifactId>components-jetty</artifactId>
-	<version>0.4-SNAPSHOT</version>
+	<version>0.4.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>eu.mosaic_cloud</groupId>
