--- a/interoperability/interoperability-core/pom.xml
+++ b/interoperability/interoperability-core/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>interoperability-parent</artifactId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 	<artifactId>interoperability-core</artifactId>
 	<dependencies>
