--- a/drivers-stubs/memcache/pom.xml
+++ b/drivers-stubs/memcache/pom.xml
@@ -84,6 +84,14 @@
 			<version>${versions.dependencies.spy}</version>
 			<exclusions>
 				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>com.sun.jdmk</groupId>
 					<artifactId>jmxtools</artifactId>
 				</exclusion>
