--- a/examples/realtime-feeds-indexer/pom.xml
+++ b/examples/realtime-feeds-indexer/pom.xml
@@ -44,6 +44,11 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.tools</groupId>
+			<artifactId>tools-threading</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.tools</groupId>
 			<artifactId>tools-exceptions</artifactId>
 			<version>${project.version}</version>
 		</dependency>
