--- a/examples/simple-cloudlets/pom.xml
+++ b/examples/simple-cloudlets/pom.xml
@@ -33,6 +33,11 @@
 		</dependency>
 		<dependency>
 			<groupId>eu.mosaic_cloud.platform</groupId>
+			<artifactId>connectors</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.mosaic_cloud.platform</groupId>
 			<artifactId>cloudlets</artifactId>
 			<version>${project.version}</version>
 			<classifier>tests</classifier>
