Update `interop.driver.*` property names
 * `interop.driver` --> `interop.driver.group`;
 * `interop.channel.address` --> `interop.driver.endpoint`;
 * `interop.driver.identifier` --> `interop.driver.identity`;

--- a/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
+++ b/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
@@ -18,9 +18,9 @@
 # #L%
 ###
 
-GenericConnector.0=interop.channel.address
-GenericConnector.1=interop.driver.identifier
-GenericConnector.2=interop.driver
+GenericConnector.0=interop.driver.endpoint
+GenericConnector.1=interop.driver.identity
+GenericConnector.2=interop.driver.group
 
 GenericKvStoreConnector.0=kvstore.connector_threads
 GenericKvStoreConnector.1=kvstore.bucket
