--- a/drivers-stubs/amqp/src/main/resources/eu/mosaic_cloud/drivers/queue/amqp/component/driver-component.properties
+++ b/drivers-stubs/amqp/src/main/resources/eu/mosaic_cloud/drivers/queue/amqp/component/driver-component.properties
@@ -20,8 +20,8 @@
 
 amqp.driver_threads = 4
 
-interop.channel.address = tcp://0.0.0.0:31028
-interop.driver.identifier = driver.amqp.1
+interop.driver.endpoint = tcp://0.0.0.0:31028
+interop.driver.identity = driver.amqp.1
 
 self.group.identifier = a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 resource.group.identifier = 8cd74b5e4ecd322fd7bbfc762ed6cf7d601eede8
