--- a/drivers-stubs/memcache/src/main/resources/eu/mosaic_cloud/drivers/kvstore/component/driver-component.properties
+++ b/drivers-stubs/memcache/src/main/resources/eu/mosaic_cloud/drivers/kvstore/component/driver-component.properties
@@ -21,8 +21,8 @@
 kvstore.driver_name = memcached
 kvstore.driver_threads = 16
 
-interop.channel.address = tcp://0.0.0.0:31029
-interop.driver.identifier = driver.memcache.1
+interop.driver.endpoint = tcp://0.0.0.0:31029
+interop.driver.identity = driver.memcache.1
 
 self.group.identifier = 5ce448e6b89b8e16ad1ec3e21a213dceafdd4eb4
 resource.group.identifier = 8c2f235681c143d29945fb9793920f434f5afec7
