--- a/drivers-stubs/redis/src/main/resources/eu/mosaic_cloud/drivers/kvstore/component/driver-component.properties
+++ b/drivers-stubs/redis/src/main/resources/eu/mosaic_cloud/drivers/kvstore/component/driver-component.properties
@@ -21,8 +21,8 @@
 kvstore.driver_name = redis
 kvstore.driver_threads = 16
 
-interop.channel.address = tcp://0.0.0.0:31029
-interop.driver.identifier = driver.redis.1
+interop.driver.endpoint = tcp://0.0.0.0:31029
+interop.driver.identity = driver.redis.1
 
 self.group.identifier = 3dc842ea826219115d49205121e7330bf1294bf4
 resource.group.identifier = 1c02d569dfb64cce9fd2dd427cf4882497325adf
