--- a/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
+++ b/examples/realtime-feeds-indexer/src/main/resources/indexer-cloudlet.properties
@@ -31,7 +31,7 @@ urgent.amqp.auto_delete=false
 urgent.amqp.passive=false
 urgent.amqp.exclusive=false
 urgent.amqp.auto_ack=true
-urgent.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+urgent.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 batch.amqp.exchange=feeds.index-data
 batch.amqp.exchange_type=topic
@@ -42,19 +42,19 @@ batch.amqp.auto_delete=false
 batch.amqp.passive=false
 batch.amqp.exclusive=false
 batch.amqp.auto_ack=true
-batch.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+batch.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 metadata.kvstore.bucket=feed-metadata
-metadata.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+metadata.interop.driver.group=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 timelines.kvstore.bucket=feed-timelines
-timelines.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+timelines.interop.driver.group=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 items.kvstore.bucket=feed-items
-items.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+items.interop.driver.group=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 data.kvstore.bucket=feed-data
-data.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+data.interop.driver.group=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 tasks.kvstore.bucket=feed-tasks
-tasks.interop.driver=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
+tasks.interop.driver.group=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
