--- a/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/simple-logging-cloudlet.properties
@@ -30,7 +30,7 @@ queue.publisher.amqp.exchange=exchange-test
 queue.publisher.amqp.routing_key=rk-2
 queue.publisher.amqp.queue=user-queue
 
-queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 # just some test data
 test.user=dummy
