--- a/drivers-core/src/main/resources/eu/mosaic_cloud/drivers/config.properties
+++ b/drivers-core/src/main/resources/eu/mosaic_cloud/drivers/config.properties
@@ -37,13 +37,13 @@ MemcachedDriver.1=memcached.port_
 AmqpDriverComponentCallbacks.0=resource.group.identifier
 AmqpDriverComponentCallbacks.1=self.group.identifier
 AmqpDriverComponentCallbacks.2=mosaic-rabbitmq:get-broker-endpoint
-AmqpDriverComponentCallbacks.3=interop.channel.address
-AmqpDriverComponentCallbacks.4=interop.driver.identifier
+AmqpDriverComponentCallbacks.3=interop.driver.endpoint
+AmqpDriverComponentCallbacks.4=interop.driver.identity
 AmqpDriverComponentCallbacks.5=mosaic-component:get.channel.data
 KVDriverComponentCallbacks.0=resource.group.identifier
 KVDriverComponentCallbacks.1=self.group.identifier
 KVDriverComponentCallbacks.2=mosaic-riak-kv:get-store-pb-endpoint
-KVDriverComponentCallbacks.3=interop.channel.address
-KVDriverComponentCallbacks.4=interop.driver.identifier
+KVDriverComponentCallbacks.3=interop.driver.endpoint
+KVDriverComponentCallbacks.4=interop.driver.identity
 KVDriverComponentCallbacks.5=mosaic-component:get.channel.data
 KVDriverComponentCallbacks.6=mosaic-riak-kv:get-store-http-endpoint
