--- a/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/consumer-cloudlet.properties
@@ -25,4 +25,4 @@ cloudlet.resource_file=consumer-cloudlet.properties
 queue.consumer.amqp.exchange=simple-exchange
 queue.consumer.amqp.routing_key=simple-rk
 queue.consumer.amqp.queue=simple-queue
-queue.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
