--- a/examples/simple-cloudlets/src/main/resources/httpg-cloudlet.properties
+++ b/examples/simple-cloudlets/src/main/resources/httpg-cloudlet.properties
@@ -22,4 +22,4 @@ cloudlet.main_class=eu.mosaic_cloud.examples.cloudlets.simple.HttpgCloudlet$Call
 cloudlet.context_class=eu.mosaic_cloud.examples.cloudlets.simple.HttpgCloudlet$Context
 cloudlet.resource_file=httpg-cloudlet.properties
 
-gateway.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+gateway.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
