--- a/examples/template-cloudlet/src/main/resources/eu/mosaic_cloud/examples/templates/cloudlets/template-cloudlet.properties
+++ b/examples/template-cloudlet/src/main/resources/eu/mosaic_cloud/examples/templates/cloudlets/template-cloudlet.properties
@@ -22,5 +22,5 @@ cloudlet.main_class=eu.mosaic_cloud.examples.templates.cloudlets.TemplateCloudle
 cloudlet.context_class=eu.mosaic_cloud.examples.templates.cloudlets.TemplateCloudlet$Context
 cloudlet.resource_file=eu/mosaic_cloud/examples/templates/cloudlets/template-cloudlet.properties
 
-queue.consumer.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
-queue.publisher.interop.driver=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.consumer.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
+queue.publisher.interop.driver.group=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
