Remove need to explicitly specify the `interop.driver.group` in connectors

--- a/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
+++ b/connectors/src/main/resources/eu/mosaic_cloud/connectors/config.properties
@@ -22,10 +22,12 @@ GenericConnector.0=interop.driver.endpoint
 GenericConnector.1=interop.driver.identity
 GenericConnector.2=interop.driver.group
 
-GenericKvStoreConnector.0=kvstore.connector_threads
+GenericKvStoreConnector.0=a3e40f0b2c041bc694ace68ace08420d40f9cbc0
 GenericKvStoreConnector.1=kvstore.bucket
 
-AmqpConnector.0=amqp.connector_threads
+MemcacheKvStoreConnector.0=5ce448e6b89b8e16ad1ec3e21a213dceafdd4eb4
+
+AmqpConnector.0=a5e40f0b2c041bc694ace68ace08420d40f9cbc0
 
 AmqpQueueConnector.0=amqp.exchange
 AmqpQueueConnector.1=amqp.routing_key
