--- a/examples/parent/pom.xml
+++ b/examples/parent/pom.xml
@@ -19,7 +19,7 @@
 	
 	<modules>
 		<module>../realtime-feeds-indexer</module>
-		<module>../template-cloudlet</module>
+		<module>../template-cloudlets</module>
 		<module>../simple-cloudlets</module>
 		<module>../simple-components</module>
 		<module>../interoperability</module>
