--- a/examples/template-cloudlets/pom.xml
+++ b/examples/template-cloudlets/pom.xml
@@ -73,6 +73,15 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- NOTE: This is not needed in general. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${versions.plugins.deploy}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
@@ -80,6 +89,7 @@
 		
 		<versions.dependencies.mosaic>0.5.0_mosaic_dev-SNAPSHOT</versions.dependencies.mosaic>
 		<versions.plugins.assembly>2.2.2</versions.plugins.assembly>
+		<versions.plugins.deploy>2.7</versions.plugins.deploy>
 		<versions.plugins.compiler>2.3.2</versions.plugins.compiler>
 		
 		<versions.java.source>1.6</versions.java.source>
