--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${versions.plugins.deploy}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${versions.plugins.surefire}</version>
 				<configuration>
@@ -249,6 +254,7 @@
 		<versions.plugins.assembly>2.2.2</versions.plugins.assembly>
 		<versions.plugins.compiler>2.3.2</versions.plugins.compiler>
 		<versions.plugins.dependency>2.4</versions.plugins.dependency>
+		<versions.plugins.deploy>2.7</versions.plugins.deploy>
 		<versions.plugins.eclipse>2.8</versions.plugins.eclipse>
 		<versions.plugins.findbugs>2.3.3</versions.plugins.findbugs>
 		<versions.plugins.jar>2.3.2</versions.plugins.jar>
