--- a/components-httpg-jetty-connector/pom.xml
+++ b/components-httpg-jetty-connector/pom.xml
@@ -47,9 +47,15 @@
 			<version>${versions.dependencies.jetty-eclipse}</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>${versions.dependencies.jsp-javax}</version>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlets</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jsp</artifactId>
+			<version>${versions.dependencies.jetty-eclipse}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -59,9 +65,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jsp-2.1-glassfish</artifactId>
-			<version>${versions.dependencies.jsp-mortbay}</version>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${versions.dependencies.jsp-javax}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
