--- a/pom.xml
+++ b/pom.xml
@@ -233,20 +233,18 @@
 		<versions.dependencies.couchbase>1.0.1</versions.dependencies.couchbase>
 		<versions.dependencies.guava>11.0</versions.dependencies.guava>
 		<versions.dependencies.jackson>1.9.3</versions.dependencies.jackson>
-		<versions.dependencies.jetty-eclipse>8.0.0.M3</versions.dependencies.jetty-eclipse> <!-- TO UPGRADE -->
+		<versions.dependencies.jetty-eclipse>8.1.3.v20120416</versions.dependencies.jetty-eclipse> <!-- 8.1.1.v20120215 -->
 		<versions.dependencies.jewelcli>0.8.1</versions.dependencies.jewelcli>
 		<versions.dependencies.json>20090211</versions.dependencies.json>
 		<versions.dependencies.json-smart>1.0.9</versions.dependencies.json-smart>
-		<versions.dependencies.jsp-eclipse>7.4.2.v20110526</versions.dependencies.jsp-eclipse> <!-- TO UPGRADE -->
-		<versions.dependencies.jsp-javax>2.1</versions.dependencies.jsp-javax> <!-- TO UPGRADE -->
-		<versions.dependencies.jsp-mortbay>2.1.v20100127</versions.dependencies.jsp-mortbay> <!-- TO UPGRADE -->
+		<versions.dependencies.jsp-eclipse>7.5.4.v20111024</versions.dependencies.jsp-eclipse>
+		<versions.dependencies.jsp-javax>2.2</versions.dependencies.jsp-javax>
 		<versions.dependencies.junit>4.10</versions.dependencies.junit>
 		<versions.dependencies.logback>1.0.0</versions.dependencies.logback>
 		<versions.dependencies.protobuf>2.4.1</versions.dependencies.protobuf>
 		<versions.dependencies.redis>2.0.0</versions.dependencies.redis>
 		<versions.dependencies.riak>1.0.5</versions.dependencies.riak>
-		<versions.dependencies.servlet-javax>2.5</versions.dependencies.servlet-javax> <!-- TO UPGRADE -->
-		<versions.dependencies.servlet-mortbay>3.0.20100224</versions.dependencies.servlet-mortbay>
+		<versions.dependencies.servlet-javax>2.5</versions.dependencies.servlet-javax>
 		<versions.dependencies.slf4j>1.6.4</versions.dependencies.slf4j>
 		<versions.dependencies.spy>2.8.0</versions.dependencies.spy>
 		
