--- a/drivers-stubs/kv-common/pom.xml
+++ b/drivers-stubs/kv-common/pom.xml
@@ -85,6 +85,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${versions.dependencies.slf4j}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
