--- a/cloudlets/pom.xml
+++ b/cloudlets/pom.xml
@@ -85,6 +85,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${versions.dependencies.slf4j}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -100,12 +101,22 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>${versions.plugins.assembly}</version>
+				<dependencies>
+					<dependency>
+						<groupId>eu.mosaic_cloud.components</groupId>
+						<artifactId>components-container</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
 						<configuration>
 							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
+								<descriptorRef>component</descriptorRef>
 							</descriptorRefs>
 							<archive>
 								<manifest>
@@ -113,9 +124,6 @@
 								</manifest>
 							</archive>
 						</configuration>
-						<goals>
-							<goal>single</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -124,6 +132,7 @@
 	
 	<properties>
 		<_maven_pom_package>mosaic-components-java-cloudlet-container</_maven_pom_package>
+		<_maven_pom_classifier>component</_maven_pom_classifier>
 	</properties>
 	
 </project>
