--- a/drivers-container/pom.xml
+++ b/drivers-container/pom.xml
@@ -80,6 +80,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${versions.dependencies.slf4j}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	
