--- a/examples/template-cloudlets/pom.xml
+++ b/examples/template-cloudlets/pom.xml
@@ -59,17 +59,51 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>${versions.plugins.assembly}</version>
+				<dependencies>
+					<dependency>
+						<groupId>eu.mosaic_cloud.platform</groupId>
+						<artifactId>cloudlets</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+				</dependencies>
 				<executions>
+					<!--
+						NOTE: This will create an `*-jar-with-dependencies.jar`
+							that should be used to launch a cloudlet from within a container.
+					-->
 					<execution>
+						<id>cloudlet</id>
 						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
 						<configuration>
 							<descriptorRefs>
 								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
 						</configuration>
+					</execution>
+					<!--
+						NOTE: This will create an `*-component.jar`, embedding the
+							cloudlet within a cloudlet container component,
+							that can be used to launch a standalone cloudlet component.
+					-->
+					<execution>
+						<id>cloudlet-component</id>
+						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>cloudlet-component</descriptorRef>
+							</descriptorRefs>
+							<archive>
+								<manifest>
+									<mainClass>eu.mosaic_cloud.examples.templates.cloudlets.TemplateCloudletComponentPreMain</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -88,7 +122,7 @@
 	<properties>
 		
 		<versions.dependencies.mosaic>0.5.0_mosaic_dev-SNAPSHOT</versions.dependencies.mosaic>
-		<versions.plugins.assembly>2.2.2</versions.plugins.assembly>
+		<versions.plugins.assembly>2.3</versions.plugins.assembly>
 		<versions.plugins.deploy>2.7</versions.plugins.deploy>
 		<versions.plugins.compiler>2.3.2</versions.plugins.compiler>
 		
