--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>${versions.plugins.resources}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${versions.plugins.surefire}</version>
 				<configuration>
@@ -264,6 +269,7 @@
 		<versions.plugins.javadoc>2.8</versions.plugins.javadoc>
 		<versions.plugins.license>1.0</versions.plugins.license>
 		<versions.plugins.project-info-reports>2.4</versions.plugins.project-info-reports>
+		<versions.plugins.resources>2.5</versions.plugins.resources>
 		<versions.plugins.site>3.1</versions.plugins.site>
 		<versions.plugins.surefire>2.11</versions.plugins.surefire>
 		<versions.plugins.wagon>1.0</versions.plugins.wagon>
