--- a/components-core/pom.xml
+++ b/components-core/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud.components</groupId>
 		<artifactId>components-parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.5.1_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../components-parent</relativePath>
 	</parent>
 	
