--- a/examples/parent/pom.xml
+++ b/examples/parent/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.mosaic_cloud</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.5.1_mosaic_dev-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	
